--- a/html/culture.html
+++ b/html/culture.html
@@ -18,8 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Inter:wght@100..900&family=Piazzolla:ital,opsz,wght@0,8..30,100..900;1,8..30,100..900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/culture.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -62,5 +63,242 @@
         </div>
       </div>
     </section>
+    <section class="culture-section">
+      <div class="carousel">
+        <div class="carousel-inner">
+          <div
+            class="carousel-item active"
+            style="background-image: url('../images/culture-1.png')"
+          ></div>
+
+          <div
+            class="carousel-item"
+            style="background-image: url('../images/culture-2.png')"
+          ></div>
+          <div
+            class="carousel-item"
+            style="background-image: url('../images/culture-3.png')"
+          ></div>
+        </div>
+        <!-- <div class="carousel-controls">
+          <span class="carousel-control-prev" onclick="prevSlide()"
+            >&#10094;</span
+          >
+          <span class="carousel-control-next" onclick="nextSlide()"
+            >&#10095;</span
+          >
+        </div> -->
+        <div class="carousel-indicators">
+          <span class="dot active" onclick="currentSlide(0)"></span>
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+        </div>
+      </div>
+      <div class="overlay">
+        <h2 class="section-title">Christmas</h2>
+        <p class="section-description">
+          Christmas brings light and joy to Denmark's darkest winter months.
+          Decorations and Christmas treats fill the weeks leading up to December
+          24th, the main day of celebration. Christmas Eve is a family affair,
+          with the country shutting down early to allow everyone to enjoy a
+          traditional Christmas dinner together. This feast often features
+          roasted meats like duck, pork, or goose, along with caramelized
+          potatoes and pickled red cabbage. The Danish love for Christmas is
+          evident even in their energy consumption, with a spike recorded as
+          families turn on ovens to cook their Christmas meals.
+        </p>
+      </div>
+    </section>
+    <section class="festivals-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-left">
+            <div class="row">
+              <h2 class="festival-title">Easter and spring festivals</h2>
+            </div>
+            <div class="row">
+              <p class="festival-description">
+                Easter in Denmark blends tradition with springtime cheer. Though
+                the date fluctuates, Easter week consistently marks the opening
+                of Tivoli amusement park. Family Easter lunches are a highlight,
+                featuring elaborately decorated eggs, hunts, and playful
+                egg-rolling competitions.
+              </p>
+            </div>
+            <div class="row">
+              <img
+                src="../images/festival-1.png"
+                alt="Festival Image"
+                class="festival-image"
+              />
+            </div>
+          </div>
+          <div class="col-right">
+            <img
+              src="../images/festival-2.png"
+              alt="Square Festival Image"
+              class="festival-square-image"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="festival-content-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-left">
+            <img
+              src="../images/festival-3.png"
+              alt="Festival Circle Image"
+              class="circle-image"
+            />
+          </div>
+          <div class="col-right">
+            <h3 class="content-title">Midsummer festival</h3>
+            <p class="content-description">
+              Midsummer festival of Saint Hans The height of Danish summer is
+              celebrated on the evening of June 23 under the name Sankt Hans
+              (Saint Hans), who is known in English as John the Baptist. The
+              festival of Sankt Hans and the celebration of the summer solstice
+              have pagan roots and date back to the days before Christianity
+              came to Denmark. Sankt Hans is generally celebrated with a dinner
+              at home with family and friends followed by a stroll to a
+              community bonfire, often by the beach, in a park, or on the shore
+              of one of Denmark's many lakes. There are speeches, and as the
+              bonfire burns, the community sings the song "Midsommervisen",
+              written by the Danish poet Holger Drachmann in 1885.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="divider-section">
+      <div class="divider">
+        <img
+          class="divider-img"
+          src="../images/divider.png"
+          alt="Divider Image"
+        />
+      </div>
+    </section>
+    <section class="fastelavn-section">
+      <div class="container">
+        <h2 class="section-title">Fastelavn</h2>
+        <p class="section-description">
+          In February, Danish children celebrate ‘Fastelavn'. This children's
+          holiday involves dressing up in costumes and usually ends with the
+          children trying to smash open a hanging cask called the "cat barrel".
+          Fortunately, these days the barrel contains only candy. The girl or
+          boy who manages to break open the barrel becomes the Kat Queen or Kat
+          King of the festival.
+        </p>
+        <div class="row">
+          <div class="col card">
+            <div class="card-image">
+              <img src="../images/fastelavn-1.png" alt="Fastelavn Image 1" />
+            </div>
+            <div class="card-title">
+              <h3>Fastelavns Barrel</h3>
+            </div>
+          </div>
+          <div class="col card">
+            <div class="card-image">
+              <img src="../images/fastelavn-2.png" alt="Fastelavn Image 2" />
+            </div>
+            <div class="card-title">
+              <h3>Fastelavn Decor</h3>
+            </div>
+          </div>
+          <div class="col card">
+            <div class="card-image">
+              <img src="../images/fastelavn-3.png" alt="Fastelavn Image 3" />
+            </div>
+            <div class="card-title">
+              <h3>Fastelavnsboller</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="divider-section">
+      <div class="divider">
+        <img
+          class="divider-img"
+          src="../images/divider.png"
+          alt="Divider Image"
+        />
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <p><a href="./references.html">All design based on references</a></p>
+        <p>Copyright © All Rights Reserved by KeYing | QianLin</p>
+      </div>
+    </footer>
+    <script>
+      let slideIndex = 0;
+
+      function showSlides() {
+        let slides = document.getElementsByClassName("carousel-item");
+        let dots = document.getElementsByClassName("dot");
+
+        for (let i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+
+        slideIndex++;
+        if (slideIndex > slides.length) {
+          slideIndex = 1;
+        }
+
+        for (let i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+
+        slides[slideIndex - 1].style.display = "flex";
+        dots[slideIndex - 1].className += " active";
+        setTimeout(showSlides, 2000); // Change image every 2 seconds
+      }
+
+      function currentSlide(n) {
+        slideIndex = n;
+        updateSlides();
+      }
+
+      function prevSlide() {
+        slideIndex -= 2;
+        updateSlides();
+      }
+
+      function nextSlide() {
+        updateSlides();
+      }
+
+      function updateSlides() {
+        let slides = document.getElementsByClassName("carousel-item");
+        let dots = document.getElementsByClassName("dot");
+
+        if (slideIndex >= slides.length) {
+          slideIndex = 0;
+        }
+
+        if (slideIndex < 0) {
+          slideIndex = slides.length - 1;
+        }
+
+        for (let i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+
+        for (let i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+
+        slides[slideIndex].style.display = "flex";
+        dots[slideIndex].className += " active";
+      }
+
+      showSlides(slideIndex);
+    </script>
   </body>
 </html>
