--- a/html/food.html
+++ b/html/food.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/food.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -65,5 +65,176 @@
         </div>
       </div>
     </section>
+    <section class="divider-section">
+      <div class="divider">
+        <img
+          class="divider-img"
+          src="../images/divider.png"
+          alt="Divider Image"
+        />
+      </div>
+    </section>
+    <section class="food-one-section">
+      <div class="container">
+        <h2 class="section-title">
+          That's fantastic news for Denmark's culinary scene!
+        </h2>
+        <p class="section-description">
+          Denmark wins the European Championship in gastronomy  After two days of competition with Nordic flavours in Trondheim (Norway), Denmark, represented by Sebastian Holberg Svendsgaard, took the first place on the podium at the Bocuse d'Or Europe. In the last decades, fine dining has become a thing in Denmark, and the number of Michelin star restaurants has just gone up – currently, Denmark holds 45 Michelin starts shared among 35 restaurants.
+          <br><br>
+          The 10th edition of the Nordic Michelin Guide is fresh off the press, and once again, Denmark stands out as a strong gastronomic leader in the Nordic region.
+        </p>
+    </section>
+    <section class="divider-section">
+      <div class="divider">
+        <img
+          class="divider-img"
+          src="../images/divider.png"
+          alt="Divider Image"
+        />
+      </div>
+    </section>
+    <section class="cuisines-section">
+      <div class="container">
+        <div class="section-header">
+          <img src="../images/food-icon.png" alt="Dessert Icon" />
+          <h2>Danish Cuisines</h2>
+        </div>
+        <div class="row">
+          <div class="col content-col">
+            <div class="content-container">
+              <div class="subtitle">
+                Denmark's national food dish 
+              </div>
+              <div class="title">
+                Stegt flæsk
+              </div>
+              <div class="description">
+                A few years ago, Danes were asked to vote for their national dish. And the winning dish, a classic pork recipe 'stegt flæsk med persillesovs', was no surprise. The crispy pork with parsley sauce and potatoes is a very old dish that has won the hearts, and tummies, of Danes for centuries. You can try the Danes' national dish in many restaurants around Denmark. Luckily, it is actually among the cheaper eats and if you become a fan, some restaurants even offer all-you-can-eat pork at affordable prices.
+              </div>
+              <div class="ingredient-title">Ingredient</div>
+              <div class="ingredient-description">
+                Roast pork , Potatoes , Parsley Sauce
+              </div>
+            </div>
+          </div>
+          <div class="col image-col">
+            <img src="../images/cuisines-1.png" alt="Smørrebrød" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col image-col image-col-special">
+            <img src="../images/cuisines-2.png" alt="Frikadeller" />
+          </div>
+          <div class="col content-col">
+            <div class="content-container">
+              <div class="subtitle">
+                Danish Pork Meatballs
+              </div>
+              <div class="title">
+                Frikadeller
+              </div>
+              <div class="description">
+                Frikadeller are flat, pan-fried meatballs of minced pork and veal with onions, eggs, milk, and breadcrumbs. They are one of the most popular and frequently made meals in Denmark, often served with boiled potatoes and gravy, or with rye bread and pickled vegetables.
+              </div>
+              <div class="ingredient-title">Ingredient</div>
+              <div class="ingredient-description">
+                Pork, Veal, Onions, Eggs, Milk, Breadcrumbs
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col content-col">
+            <div class="content-container">
+              <div class="subtitle">
+                Danish Minced Beef with Fried Onions
+              </div>
+              <div class="title">
+                Hakkebøf
+              </div>
+              <div class="description">
+                Danish minced beef with caramelized onions and brown sauce makes for a perfectly cozy evening meal. The dish has been around for generations, back when cattle farms supplied the freshest and most tender meats and the beef had to be minced manually.It continues to be one of the most appreciated dishes among Danish people of all ages.
+              </div>
+              <div class="ingredient-title">Ingredient</div>
+              <div class="ingredient-description">
+                Beef , Potatoes , Onion , Pickled gherkins / Pickled beets
+              </div>
+            </div>
+          </div>
+          <div class="col image-col">
+            <img src="../images/cuisines-3.png" alt="Smørrebrød" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="divider-section">
+      <div class="divider">
+        <img
+          class="divider-img"
+          src="../images/divider.png"
+          alt="Divider Image"
+        />
+      </div>
+    </section>
+    <section class="dessert-section">
+      <div class="container">
+        <div class="section-header">
+          <img src="../images/food-icon.png" alt="Dessert Icon" />
+          <h2>Danish Dessert</h2>
+        </div>
+        <div class="row">
+          <div class="col card">
+            <img class="card-img" src="../images/dessert-1.png" alt="Dessert 1" />
+            <div class="short-description">Old-fashioned Danish Apple Trifle</div>
+            <h3>ÆBLEKAGE</h3>
+            <p>
+              Æblekage is an old fashioned Danish apple trifle, formed of layers of soft vanilla-infused apples, sweet crunchy crumbs and some whipped cream on top. It's a simple and deliciously comforting combination, that makes a tasty, easy dessert.
+            </p>
+          </div>
+          <div class="col card">
+            <img class="card-img" src="../images/dessert-2.png" alt="Dessert 2" />
+            <div class="short-description">The quick Danish food</div>
+            <h3>Røde Pølser</h3>
+            <p>
+              Hot dogs are the street food of choice in Copenhagen. They are served with a variety of condiments, but this particular combination is a true classic...a creamy curried remoulade sauce, fresh pickled cucumber and crispy fried onoion. It might sound a bit odd, but all of these condiments are quite common in Danish cuisine and are absolutely delicious together.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col card">
+            <img class="card-img" src="../images/dessert-3.png" alt="Dessert 3" />
+            <div class="short-description">Dream cake</div>
+            <h3>Drømmekage</h3>
+            <p>
+              Drømmekage (lit. Dream cake) is a traditional Danish cake originating from Hjallerup in Jutland. The cake is made with a combination of flour, sugar, butter, eggs, milk, baking powder, and vanilla.
+            </p>
+          </div>
+          <div class="col card">
+            <img class="card-img" src="../images/dessert-4.png" alt="Dessert 4" />
+            <div class="short-description">Traditional Danish Layer Cake</div>
+            <h3>Lagkage</h3>
+            <p>
+              Danish lagkage, a festive layered cake, reigns supreme at Danish celebrations. Fluffy sponge layers are interwoven with creamy delights like pastry cream and fresh fruit, or tangy fruit preserves. The cake itself can be made with different batters, and the whole masterpiece is crowned with a rich blanket of whipped cream and even more fruit. From birthdays to grand occasions, lagkage is the sweet centerpiece that brings Danes together.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="divider-section">
+      <div class="divider">
+        <img
+          class="divider-img"
+          src="../images/divider.png"
+          alt="Divider Image"
+        />
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <p><a href="./references.html">All design based on references</a></p>
+        <p>Copyright © All Rights Reserved by KeYing | QianLin</p>
+      </div>
+    </footer>
   </body>
 </html>
