--- a/html/fact.html
+++ b/html/fact.html
@@ -180,19 +180,19 @@
           <div class="col logo-col">
             <div class="image-container">
               <img src="../images/fact-6.png" alt="Partner 1" />
-              <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Read More</a>
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="../images/fact-7.png" alt="Partner 2" />
-              <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Read More</a>
             </div>
           </div>
           <div class="col logo-col">
             <div class="image-container">
               <img src="../images/fact-8.png" alt="Partner 3" />
-              <a href="#" class="btn">Learn More</a>
+              <a href="#" class="btn">Read More</a>
             </div>
           </div>
         </div>
@@ -204,5 +204,105 @@
         <p>Copyright © All Rights Reserved by KeYing | QianLin</p>
       </div>
     </footer>
+    <div id="imageCarouselPopup" class="carousel-popup">
+      <span class="close-btn" id="close-btn" onclick="closeCarousel()">
+        &times;
+      </span>
+      <div class="carousel-content">
+        <div class="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../images/fact-1.png" alt="Fact Image 1" />
+            </div>
+            <div class="carousel-item">
+              <img src="../images/fact-2.png" alt="Fact Image 2" />
+            </div>
+            <div class="carousel-item">
+              <img src="../images/fact-3.png" alt="Fact Image 3" />
+            </div>
+          </div>
+          <a class="prev" onclick="prevSlide()">&#10094;</a>
+          <a class="next" onclick="nextSlide()">&#10095;</a>
+        </div>
+        <div class="carousel-indicators">
+          <img
+            src="../images/fact-1.png"
+            class="indicator-img"
+            onclick="currentSlide(1)"
+            alt="Fact Image 1"
+          />
+          <img
+            src="../images/fact-2.png"
+            class="indicator-img"
+            onclick="currentSlide(2)"
+            alt="Fact Image 2"
+          />
+          <img
+            src="../images/fact-3.png"
+            class="indicator-img"
+            onclick="currentSlide(3)"
+            alt="Fact Image 3"
+          />
+        </div>
+      </div>
+    </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const element = document.getElementById("close-btn");
+        element.addEventListener("click", closeCarousel);
+        const carouselPopup = document.getElementById("imageCarouselPopup");
+        const carouselItems = document.querySelectorAll(".carousel-item");
+        const indicatorImgs = document.querySelectorAll(".indicator-img");
+        let currentSlideIndex = 0;
+
+        function openCarousel(index) {
+          carouselPopup.style.display = "block";
+          showSlide(index);
+        }
+
+        function closeCarousel() {
+          console.log("clicked");
+          carouselPopup.style.display = "none";
+        }
+
+        function showSlide(index) {
+          currentSlideIndex = index;
+          carouselItems.forEach((item, i) => {
+            item.classList.toggle("active", i === index);
+          });
+          indicatorImgs.forEach((img, i) => {
+            img.classList.toggle("active", i === index);
+          });
+        }
+
+        function nextSlide() {
+          showSlide((currentSlideIndex + 1) % carouselItems.length);
+        }
+
+        function prevSlide() {
+          showSlide(
+            (currentSlideIndex - 1 + carouselItems.length) %
+              carouselItems.length
+          );
+        }
+
+        function currentSlide(index) {
+          showSlide(index - 1);
+        }
+
+        document.querySelectorAll(".fact-col img").forEach((img, index) => {
+          img.addEventListener("click", () => openCarousel(index));
+        });
+
+        document
+          .getElementById("close-btn")
+          .addEventListener("click", closeCarousel);
+
+        window.closeCarousel = closeCarousel;
+        window.nextSlide = nextSlide;
+        window.prevSlide = prevSlide;
+        window.currentSlide = currentSlide;
+      });
+    </script>
   </body>
 </html>
